--- a/com.modular.demo.client/pom.xml
+++ b/com.modular.demo.client/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.modular</groupId>
+        <groupId>modular</groupId>
         <artifactId>com.modular.demo.client</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>com.modular.demo.client</artifactId>
+
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
@@ -18,18 +18,27 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.example</groupId>
+            <groupId>modular</groupId>
             <artifactId>com.modular.demo.producer</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.example</groupId>
+            <groupId>modular</groupId>
             <artifactId>com.modular.demo.consumer</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
