--- a/com.modular.demo.producer/pom.xml
+++ b/com.modular.demo.producer/pom.xml
@@ -4,17 +4,27 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.modular</groupId>
-        <artifactId>ModularDemo</artifactId>
+        <groupId>modular</groupId>
+        <artifactId>com.modular.demo.producer</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>com.modular.demo.producer</artifactId>
+
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
